--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -10,20 +10,28 @@
 </head>
 
 <body>
+    <div class="wrapper">
 
-    <header class="header">
+        <header class="header">
 
-    </header>
+        </header>
 
 
-    <main>
 
-    </main>
-    <footer>
-        <p>2023</p>
-        <a class="footer-school" href="https://rs.school/js-stage0/" target="_blank">The Rolling Scopes School</a>
-        <a href="https://github.com/RomanGargosow" target="_blank">Roman Gargosow</a>
+
+        <main>
+
+        </main>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <p>2023</p>
+            <a class="footer-school" href="https://rs.school/js-stage0/" target="_blank"><img
+                    src="https://rs.school/images/rs_school_js.svg" alt="logo RSS"></a>
+            <a href="https://github.com/RomanGargosow" target="_blank">Roman Gargosow</a>
+        </div>
     </footer>
+
 </body>
 
 </html>
