feat: update footer, add icon

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -24,6 +24,9 @@
         </main>
     </div>
     <footer class="footer">
+        <div class="footer-line">
+            <span> <img src="./source/icons/pngegg.png" alt="icons">D://Footer</span>
+        </div>
         <div class="container">
             <p>2023</p>
             <a class="footer-school" href="https://rs.school/js-stage0/" target="_blank"><img
