feat: add controls icons

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -12,15 +12,38 @@
 <body>
     <div class="wrapper">
 
-        <header class="header">
+        <main class="main">
+            <div class="winamp">
 
-        </header>
+                <div class="winamp-head">
+                    <div class="icon-border">
+                        <img src="./source/icons/icons8-winamp-32.png" alt="head-img">
+                    </div>
+                    <div class="name-track">
+                        <span>Тут название трека</span>
+                    </div>
+                </div>
 
+                <div class="track-line">
+                    <input type="range" class="track-line" min="0" max="100" value="0">
+                </div>
 
+                <div class="winamp-controls">
+                    <div>
+                        <img src="./source/icons/controls/left.png" alt="left">
+                    </div>
+                    <div>
+                        <img src="./source/icons/controls/play.png" alt="play">
+                    </div>
+                    <div>
+                        <img src="./source/icons/controls/payse.png" alt="payse">
+                    </div>
+                    <div>
+                        <img src="./source/icons/controls/right.png" alt="right">
+                    </div>
+                </div>
 
-
-        <main>
-
+            </div>
         </main>
     </div>
     <footer class="footer">
