feat: add audio files

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -15,12 +15,16 @@
         <main class="main">
             <div class="winamp">
 
+
+                <audio id="audioPlayer" src="./source/audio/1.emenem/Eminem-Dido_-_Stan.mp3"></audio>
+
                 <div class="winamp-head">
-                    <div class="icon-border">
-                        <img src="./source/icons/icons8-winamp-32.png" alt="head-img">
+                    <div class="icon-border cover">
+                        <img src="./source/audio/1.emenem/emenem.jpeg" alt="head-img">
                     </div>
                     <div class="name-track">
-                        <span>Тут название трека</span>
+                        <span>Eminem - Stan ft. Dido - Stan</span>
+                        <span class="trackTime"> 03:05</span>
                     </div>
                 </div>
 
@@ -29,16 +33,16 @@
                 </div>
 
                 <div class="winamp-controls">
-                    <div>
+                    <div class="prev">
                         <img src="./source/icons/controls/left.png" alt="left">
                     </div>
-                    <div>
+                    <div class="play" id="playButton">
                         <img src="./source/icons/controls/play.png" alt="play">
                     </div>
-                    <div>
+                    <div class="payse">
                         <img src="./source/icons/controls/payse.png" alt="payse">
                     </div>
-                    <div>
+                    <div class="next">
                         <img src="./source/icons/controls/right.png" alt="right">
                     </div>
                 </div>
@@ -57,7 +61,7 @@
             <a href="https://github.com/RomanGargosow" target="_blank">Roman Gargosow</a>
         </div>
     </footer>
-
+    <script src="./index.js" type="module"></script>
 </body>
 
 </html>
